<resources>
    <string name="app_name">HostelEase</string>
    <string name="full_name">Full Name</string>
    <string name="profile">PROFILE</string>
    <string name="full_name1">Full Name</string>
    <string name="confirm">Confirm</string>
    <string name="email_address">Email Address</string>
    <string name="email_address1">Email Address</string>
    <string name="gender">Gender</string>
    <string name="gender1">Gender</string>
    <string name="address">Address</string>
    <string name="address1">Address</string>
    <string name="todo">TODO</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="date_of_birth1">Date of Birth</string>

</resources>